@@ -21,9 +21,9 @@
  *
  */
 
-#import <AppKit/AppKit.h>
-#import "AppController.h"
-#import "DiffWindowController.h"
+#include <AppKit/AppKit.h>
+#include "AppController.h"
+#include "DiffWindowController.h"
 
 #include <math.h>
 
