@@ -1,7 +1,6 @@
 #
 # GNUmakefile - Generated by ProjectCenter
-# Written by Philippe C.D. Robert <phr@3dkit.org>
-# GormApplication project type contibuted by Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+# Written by Philippe C.D. Robert <probert@siggraph.org>
 #
 # NOTE: Do NOT change this file -- ProjectCenter maintains it!
 #
@@ -10,10 +9,13 @@
 #
 
 include $(GNUSTEP_MAKEFILES)/common.make
-#
 
+
+#
 # Subprojects
 #
+
+
 
 #
 # Main application
@@ -22,31 +24,30 @@ include $(GNUSTEP_MAKEFILES)/common.make
 PACKAGE_NAME=EasyDiff
 APP_NAME=EasyDiff
 GNUSTEP_INSTALLATION_DIR=$(GNUSTEP_LOCAL_ROOT)/
-EasyDiff_MAIN_MODEL_FILE=EasyDiff.gorm
 EasyDiff_APPLICATION_ICON=
-#
+EasyDiff_MAIN_MODEL_FILE=main.gorm
 
+
+#
 # Additional libraries
 #
 
 ADDITIONAL_GUI_LIBS += 
 
 #
-
 # Resource files
 #
 
 EasyDiff_RESOURCE_FILES= \
-EasyDiff.gorm \
-DiffWindow.gorm \
+main.gorm \
+window.gorm \
 EasyDiffInfo.plist 
 
 #
-
 # Header files
 #
 
-EasyDiff_HEADERS= \
+EasyDiff_HEADER_FILES= \
 AppController.h \
 DiffTextView.h \
 DiffMiddleView.h \
@@ -54,7 +55,6 @@ DiffView.h \
 DiffWindowController.h 
 
 #
-
 # Class files
 #
 
@@ -66,10 +66,9 @@ DiffMiddleView.m \
 DiffView.m \
 DiffWrapper.m \
 DiffWindowController.m \
-DiffScroller.m
+DiffScroller.m 
 
 #
-
 # C files
 #
 
